<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fluttershy.myapplication.Settings">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_auto_open"
            android:id="@+id/settingsAutoOpen"
            android:onClick="clickCheckbox" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_show_group"
            android:id="@+id/settingsShowGroup"
            android:onClick="clickCheckbox" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_show_teacher"
            android:id="@+id/settingsShowTeacher"
            android:onClick="clickCheckbox" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_show_place"
            android:id="@+id/settingsShowPlace"
            android:onClick="clickCheckbox" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_show_automid"
            android:id="@+id/settingsShowAutoMid"
            android:onClick="clickCheckbox" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_separator"
            android:gravity="center"
            android:singleLine="false"
            android:id="@+id/settings_separator"
            android:autoText="false" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_revers_up"
            android:id="@+id/settingsReversUp"
            android:onClick="clickCheckbox" />

    </LinearLayout>

</RelativeLayout>
