<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabhost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView android:text="@string/tabText0" style="@style/MyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <android.support.v4.widget.SwipeRefreshLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/swipe_container1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView1"
                        android:layout_gravity="center_horizontal"/>
                    </android.support.v4.widget.SwipeRefreshLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView android:text="@string/tabText1" style="@style/MyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <android.support.v4.widget.SwipeRefreshLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/swipe_container2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView2"
                        android:layout_gravity="center_horizontal" />
                    </android.support.v4.widget.SwipeRefreshLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView android:text="@string/tabText2" style="@style/MyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <android.support.v4.widget.SwipeRefreshLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/swipe_container3"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView3"
                        android:layout_gravity="center_horizontal" />
                    </android.support.v4.widget.SwipeRefreshLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView android:text="@string/tabText3" style="@style/MyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <android.support.v4.widget.SwipeRefreshLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/swipe_container4"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView4"
                        android:layout_gravity="center_horizontal" />
                    </android.support.v4.widget.SwipeRefreshLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView android:text="@string/tabText5" style="@style/MyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="8dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="2dp"
                            android:src="@mipmap/tab_ico_6"
                            android:layout_alignBottom="@+id/editText" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:id="@+id/editText"
                            android:hint="Поиск"
                            android:paddingLeft="43dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />
                    </RelativeLayout>
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView6"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView android:text="@string/tabText4" style="@style/MyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <android.support.v4.widget.SwipeRefreshLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/swipe_container5"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView5"
                        android:layout_gravity="center_horizontal" />
                    </android.support.v4.widget.SwipeRefreshLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>
